--- a/UkraineAlarmsApi/package.json
+++ b/UkraineAlarmsApi/package.json
@@ -12,5 +12,9 @@
   "devDependencies": {
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "prop-types": "^15.8.1",
+    "react-dom": "^18.2.0"
   }
 }
